# Jurom

./: .gitignore  Cargo.toml  LICENSE  bugs.md  changelog.md  changelogs.md  readme.md
examples/: calculator.jr  comparison  functions.jr  hello.jr  loops.jr
src/: ast.rs  interpreter.rs  main.rs  parser.rs  runtime.rs
src/error/: analyzer.rs
src/generator/: mod.rs
src/generator/compiler/: compiler_wrapper.rs  llvm_compiler.rs  mod.rs
src/generator/interpret/: interpret.rs
src/generator/transpiler/: cpp.rs
src/lexers/: lexer.rs
src/parser/: parse_assignment.rs  parse_binary_op.rs  parse_block.rs  parse_boolean.rs  parse_comparison.rs  parse_condition_in_parens.rs  parse_else_if.rs  parse_expresion.rs  parse_function_call.rs  parse_if.rs  parse_if_condition.rs  parse_line.rs  parse_number.rs  parse_operand.rs  parse_println.rs  parse_statement_body.rs  parse_string.rs  parse_variable.rs  parse_variable_decl.rs  parse_while.rs
src/parsers/: parser.rs
src/project/: config.rs
