[package]
name = "jurom"
version = "0.1.1"
edition = "2024"
authors = ["TheJurmikDev thejurmik@gmail.com"]
description = "Rust based programming language named jurom"
license = "Apache-2.0"
repository = "https://github.com/TheJurmikDev/Jurom-language"
readme = "readme.md"
keywords = ["programming-language", "language", "rust", "jurom", "custom-language"]
categories = ["compilers", "development-tools"]

[dependencies]
nom = "7.1.3"
colored = "2.1.0"